@@ -44,6 +44,8 @@ void set_user_error_status(int incr=1);
 void set_other_error_status(int incr=1);
 void set_fatal_error_status(int incr=1);
 
+void fatal_exit(void);
+
 void set_group_warn_status(int incr=1);
 void set_retrieve_warn_status(int incr=1);
 void set_undecoded_warn_status(int incr=1);
